# Proyecto_1_Datos_2

./: CMakeLists.txt  dconfig  main.cpp
GUI/: MainWindow.cpp  MainWindow.h
GUI/IDE/: CodeEditor.cpp  CodeEditor.h
Interpreter/: Interpreter.cpp  Interpreter.h  LineReader.cpp  LineReader.h  OutputManager.cpp  OutputManager.h
JsonManeger/: JsonManager.cpp  JsonManager.h  JsonManger.cpp  JsonManger.h
Logger/: Logger.cpp  Logger.h
MemoryMgmt/: GarbageCollector.cpp  GarbageCollector.h  MemoryLayout.cpp  MemoryLayout.h  MemoryManager.cpp  MemoryManager.h
ServerSocket/Client/: Client.cpp  Client.h
ServerSocket/Server/: Server.cpp  Server.h
Utilities/: ListMemory.cpp  ListMemory.h  Node.cpp  Node.h  Reference.cpp  Reference.h  ReferenceList.cpp  ReferenceList.h
Utilities/SpecialTypes/: ReferenceType.cpp  ReferenceType.h  Struct.cpp  Struct.h  StructType.cpp  StructType.h
docs/html/: 3_817_85_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_817_85_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp_source.html  3_817_85_2CompilerIdC_2CMakeCCompilerId_8c.html  3_817_85_2CompilerIdC_2CMakeCCompilerId_8c_source.html  3_819_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_819_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp_source.html  3_819_82_2CompilerIdC_2CMakeCCompilerId_8c.html  3_819_82_2CompilerIdC_2CMakeCCompilerId_8c_source.html  Client_8cpp.html  Client_8cpp__incl.map  Client_8cpp__incl.md5  Client_8cpp_source.html  Client_8h.html  Client_8h__dep__incl.map  Client_8h__dep__incl.md5  Client_8h__incl.map  Client_8h__incl.md5  Client_8h_source.html  CodeEditor_8cpp.html  CodeEditor_8cpp__incl.map  CodeEditor_8cpp__incl.md5  CodeEditor_8cpp_source.html  CodeEditor_8h.html  CodeEditor_8h__dep__incl.map  CodeEditor_8h__dep__incl.md5  CodeEditor_8h__incl.map  CodeEditor_8h__incl.md5  CodeEditor_8h_source.html  ExternalLibraries_2nlohmann_2json_8hpp.html  ExternalLibraries_2nlohmann_2json_8hpp__dep__incl.map  ExternalLibraries_2nlohmann_2json_8hpp__dep__incl.md5  ExternalLibraries_2nlohmann_2json_8hpp__incl.map  ExternalLibraries_2nlohmann_2json_8hpp__incl.md5  ExternalLibraries_2nlohmann_2json_8hpp_source.html  Interpreter_8cpp.html  Interpreter_8cpp__incl.map  Interpreter_8cpp__incl.md5  Interpreter_8cpp_source.html  Interpreter_8h.html  Interpreter_8h__dep__incl.map  (+1060 more)
docs/latex/: 3_817_85_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  3_817_85_2CompilerIdC_2CMakeCCompilerId_8c.tex  3_819_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  3_819_82_2CompilerIdC_2CMakeCCompilerId_8c.tex  Client_8cpp.tex  Client_8cpp__incl.md5  Client_8h.tex  Client_8h__incl.md5  (+625 more)
(+158 files in other folders)
